2004-11-12  Erik Hjortsberg  <erik@katastrof.nu>

	* Added EmberTerrainSceneManager, which removes the need to link to Ogre's TerrainSceneManager.

2004-11-12  Erik Hjortsberg  <erik@katastrof.nu>

	*  Added environment classes: Sun, Sky, Water, Foliage
	* Rewrote Model handling to use a subclass of Ogre::ResourceManager
	* Various fixes to get the resouce handling to work better for distributions.
	* Upon startup now only a lone avatar is shown. This is for debugging and shall be removed.
	* Removed bug where images were written to a non-existant directory, resulting in strange resource allocation problems. Ugly one.
	* Various small changes to widgets.

2004-11-08  Erik Hjortsberg  <erik@katastrof.nu>

	* Fixed stupid compile bug.

2004-11-08  Erik Hjortsberg  <erik@katastrof.nu>

	* remove reference to unused GroundCover

2004-11-08  Erik Hjortsberg  <erik@katastrof.nu>

	* Added givewidget.

2004-11-08  Erik Hjortsberg  <erik@katastrof.nu>

	* Added include file to solve problem with Ogre's memory manager messing with atlas.

2004-11-04  Erik Hjortsberg  <erik@katastrof.nu>

	* Moved foliage to class Foliage. The grass is now randomly rotated and scaled.

2004-11-04  Erik Hjortsberg  <erik@katastrof.nu>

	* Fixes for compilation

2004-11-04  Erik Hjortsberg  <erik@katastrof.nu>

	* Moved from dime to ember. Thus the big checkin.
	* Added wield action to inventory

2004-10-04 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* Fixed many small details that prevented Ember
	to build and run flawlessly.

2004-08-05 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* /src/services/server/OOGChat.(h|cpp):
	Changed OOG send msg command from "say" to "talk", "say" will be
	reserved for In-Game chat.
	* /src/services/server/ServerService.(h|cpp), /src/components/ogre/...:
	Now "say" or no command sends In-Game chat message. 
	Messages from the player are correctly displayed.

2004-08-05 Miguel Guzman <aglanor [at] telefonica [dot] net>