@@ -2,6 +2,7 @@ INCLUDES = -I$(top_srcdir)/src
 SUBDIRS = src
 EXTRA_DIST = run
 
-confdir = $(datadir)/ember/data/
+confdir = $(datadir)/ember/conf/
 dist_conf_DATA = ember.conf
 
+mediadir = $(datadir)/ember/data/media
