@@ -44,7 +44,7 @@
 #include <sigc++/object_slot.h>
 #endif
 
-#include <OgreTerrainSceneManager.h>
+#include "EmberSceneManager/include/EmberTerrainSceneManager.h"
 
 namespace EmberOgre {
 
@@ -70,7 +70,7 @@ public:
 	typedef std::set<Ogre::String> StringSet;
 	
 
-	EmberEntityFactory(Ogre::TerrainSceneManager* sceneManager, TerrainGenerator* terrainGenerator, Eris::TypeService* typeService);
+	EmberEntityFactory(EmberTerrainSceneManager* sceneManager, TerrainGenerator* terrainGenerator, Eris::TypeService* typeService);
 	virtual ~EmberEntityFactory();
 /*
  * eris 1.3	
@@ -117,7 +117,7 @@ protected:
 
 
 
-	Ogre::TerrainSceneManager* mSceneManager;
+	EmberTerrainSceneManager* mSceneManager;
 	//EmberTerrainPageSource* mTerrainSource;
 	TerrainGenerator* mTerrainGenerator;
 	Eris::TypeService* mTypeService;
