@@ -33,8 +33,8 @@ Enhancements 2003 - 2004 (C) The OGRE Team
 
 ***************************************************************************/
 
-#include <OgreOctree.h>
-#include <OgreOctreeNode.h>
+#include "OgreOctree.h"
+#include "OgreOctreeNode.h"
 
 namespace Ogre
 {
