@@ -1,3 +1,9 @@
+2004-11-13  Erik Hjortsberg  <erik@katastrof.nu>
+
+	* Changed modeldefintions. Use "Action" instead of "Animation" because an action can contain more than just animations, sounds for example.
+	* Fixed wrong references to Ogre::TerrainSceneManager
+	* Changed location of config and media files.
+
 2004-11-12  Erik Hjortsberg  <erik@katastrof.nu>
 
 	* Added EmberTerrainSceneManager, which removes the need to link to Ogre's TerrainSceneManager.
